--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -12,9 +12,39 @@ jobs:
       issues: write
     steps:
       - name: Improve Issue Titles
-        uses: horw/issue-title-ai@v0.1.0b
+        uses: horw/issue-title-ai@ff88b2302d52d2b26a578288e7ec0da93d68c583
         with:
           github-token: ${{ github.token }}
           gemini-api-key: ${{ secrets.GEMINI_API_KEY }}
           days-to-scan: 7
           auto-update: true
+          prompt: |
+            Custom prompt for the AI model.
+
+            default:
+            You are an expert at writing clear, concise, and descriptive GitHub issue titles.
+            Please analyze the following issue title and determine if it needs improvement.
+            If the title is already clear, specific, and well-formatted, return the original title unchanged.
+            Otherwise, improve it to make it more specific, actionable, and easy to understand.
+            The improved title should clearly communicate the problem or feature request.
+
+            Original Issue Title: "{original_title}"
+
+            Issue Description:
+            \"\"\"
+            {issue_body}
+            \"\"\"
+
+            Rules for a good issue title:
+            1. Be specific and descriptive
+            2. Use action verbs when appropriate
+            3. Include relevant context (component name, page, feature)
+            4. Keep it concise (under 80 characters ideally)
+            5. Avoid vague terms like "bug" or "issue" without context
+            6. Don't change the meaning or intent of the original issue
+            7. If the original title is already good enough, do not change it
+
+            Your response should ONLY contain the improved issue title
+            or the original title if it's already good.
+            Do not include any other text or explanations.
+          skip-label: ai-title
