--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -1,54 +1,46 @@
-name: Improve Issue Titles Example
-
-on:
+name: titles
+'on':
+  schedule:
+    - cron: '0 0 * * *'
   workflow_dispatch:
   issues:
-    types: [opened]
-
+    types: [ opened ]
 jobs:
-  improve-titles:
-    runs-on: ubuntu-latest
-    permissions:
-      issues: write
+  titles:
+    timeout-minutes: 15
+    runs-on: ubuntu-24.04
     steps:
-      - name: Improve Issue Titles
-        uses: horw/issue-title-ai@v0.1.1b
+      - uses: horw/issue-title-ai@v0.1.1b
         with:
-          github-token: ${{ github.token }}
-          gemini-api-key: ${{ secrets.GEMINI_API_KEY }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          openai-api-key: ${{ secrets.OPENAI_API_KEY }}
           days-to-scan: 7
+          skip-label: 'good-title'
           auto-update: true
-          prompt: |
-            **Prompt:**
+          max-issues: 10
+          model: gpt-4
+          prompt: |-
+            You are an expert at writing clear, concise, and descriptive GitHub issue titles.
+            Please analyze the following issue title and determine if it needs improvement.
+            If the title is already clear, specific, and well-formatted, return the original title unchanged.
+            Otherwise, improve it to make it more specific, actionable, and easy to understand.
+            The improved title should clearly communicate the problem or feature request.
 
-            You are a monster, and it's your job to rename GitHub issues in a monstrous way. That means adding growls, roars, and chaos — like "Ghhh", "Arhhh", "Raaawr", etc.
+            Original Issue Title: "{original_title}"
 
-            Your job is to improve the issue title in a way that's still clear and helpful to humans, but with a monstrous twist.
-
-            ---
-
-            **Original Issue Title:**  
-            `"{original_title}"`
-
-            **Issue Description:**  
-            ```
+            Issue Description:
+            \"\"\"
             {issue_body}
-            ```
+            \"\"\"
 
-            ---
+            Rules for a good issue title:
+            1. It must sound like a bug report, assuring that something is broken
+            2. Use aggressive tone, to ephasize the problem at hands
+            3. Keep it concise (under 80 characters ideally)
+            4. Avoid vague terms like "bug" or "issue" without context
+            5. Don't change the meaning or intent of the original issue
+            6. If the original title is already good enough, do not change it
 
-            **Rules for a good issue title:**
-            1. Be specific and descriptive  
-            2. Use action verbs when appropriate  
-            3. Include relevant context (component name, page, feature)  
-            4. Keep it concise (under 80 characters ideally)  
-            5. Avoid vague terms like "bug" or "issue" without context  
-            6. Don't change the meaning or intent of the original issue  
-            7. If the original title is already good enough, just add a monster sound (e.g. “Arghh!”) at the start or end — do not change it unnecessarily
-
-            ---
-
-            Your response should ONLY contain the improved issue title (or the original title if it's already good — with a monster sound if you like). Do not include any other text or explanation.
-
-            ---
-          skip-label: ai-title
+            Your response should ONLY contain the improved issue title
+            or the original title if it's already good.
+            Do not include any other text or explanations.
