--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       issues: write
     steps:
-      - uses: horw/issue-title-ai@v0.1.1b
+      - uses: horw/issue-title-ai@f9af8f312af443a0d0c2c7936fe6cb4be0b22e27
         with:
           github-token: ${{ github.token }}
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
@@ -20,6 +20,7 @@ jobs:
           skip-label: 'good-title'
           auto-update: true
           max-issues: 10
+          verbose: true
           model: gpt-4
           prompt: |-
             You are an expert at writing clear, concise, and descriptive GitHub issue titles.
