--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -45,8 +45,8 @@ jobs:
             4. Avoid vague terms like "bug" or "issue" without context
             5. Don't change the meaning or intent of the original issue
             6. If the original title is already good enough, do not change it
-            7. RESULTED TITLE MUST END WITH LALALA AND WITH "' 
-            8. RESULT HAVE TO BE IN " or '
+            RESULTED TITLE MUST END WITH LALALA AND WITH "' 
+            RESULT HAVE TO BE IN " or '
 
             Your response should ONLY contain the improved issue title
             or the original title if it's already good.
