--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       issues: write
     steps:
-      - uses: horw/issue-title-ai@0e3f784a4769bfa5c623ff2f9bd5363d6e2c5425
+      - uses: horw/issue-title-ai@f817303be62dcc48759163840d252c195f6425ce
         with:
           github-token: ${{ github.token }}
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
@@ -24,4 +24,5 @@ jobs:
           model: gpt-4
           quiet: true
           strip-characters: "LA\"'"
-          style: "summarization"
+          style: "default"
+          required-labels: "bug"
