--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       issues: write
     steps:
-      - uses: horw/issue-title-ai@1ae111dcbaa61013f66408069585aa18ce0e8715
+      - uses: horw/issue-title-ai@v0.1.3b
         with:
           github-token: ${{ github.token }}
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
