--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       issues: write
     steps:
-      - uses: horw/issue-title-ai@v0.1.3b
+      - uses: horw/issue-title-ai@fa3a6d7122788026def7d40f7ca4ecd168d358f0
         with:
           github-token: ${{ github.token }}
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
